syntax = "proto3";

package grpc.product;

option java_multiple_files = true;
option java_package = "grpc.product";
option java_outer_classname = "FindOrderProductIds";

message FindOrderProductIdsRequest {
  int64 customerId = 1;
  int64 limit = 2;
}

message FindOrderProductIdsResponse {
  bool exists = 1;
}

service FindOrderProductIdsService {
  rpc findIds (FindOrderProductIdsRequest) returns (FindOrderProductIdsResponse);
}
